refactor: Race 도메인 클래스와 OutputView 클래스의 의존성 제거